# platescraping

./: .#licenseplate.cabal  .gitignore  cabal.sandbox.config  licenseplate.cabal  platescraping.cabal  readme.md  stack.yaml
app/: Main.hs
src/: #LandRegisterType.hs#  #Scratch.hs#  #Tinglysning.hs#  #Trafikstyrelsen.hs#  #Utils.hs#  .#LandRegisterType.hs  .#Main.hs  .#Scratch.hs  .#Tinglysning.hs  .#Trafikstyrelsen.hs  .#Utils.hs  ErrorType.hs  Examples.hs  LandRegisterType.hs  LandRegisterTypes.hs  Main.hs  Rest.hs  Scratch.hs  SurveyorRapportType.hs  Tinglysning.hs  Trafikstyrelsen.hs  Utils.hs
