name:              licenseplate
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable licenseplate
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   base>=4.7
                 , tagsoup==0.13.3
                 , HTTP==4000.2.19
                 , conduit==1.2.4.2
                 , http-types==0.8.6
                 , http-client==0.4.15
                 , http-client-openssl==0.2.0.0
                 , http-client-tls==0.2.2
                 , HsOpenSSL==0.11.1.1
                 , bytestring==0.10.6.0
                 , split==0.1.2.3
                 , mtl==2.2.1
                 , parsec==3.1.9
                 , time==1.5.0.1
                 , text==1.2.1.1
                 , network==2.6.0.2
                 , lens==4.11
                 , connection==0.2.5
