name:              licenseplate
version:           1.0
Build-Type:        Simple
cabal-version:     >= 1.2

executable licenseplate
  main-is:         Main.hs
  hs-source-dirs:  src
  build-depends:   HTTP>=4000.3.3
                 , aeson>=0.11.2.1
                 , base>=4.7
                 , bytestring>=0.10.6.0
                 , cgi>=3001.3.0.1
                 , conduit>=1.2.7
                 , connection>=0.2.6
                 , errors>=2.1.2
                 , http-client>=0.4.31
                 , http-types>=0.8.6
                 , mtl>=2.2.1
                 , multipart>=0.1.2
                 , network>=2.6.0.2
                 , scotty>=0.10.1
                 , split>=0.1.2.3
                 , tagsoup>=0.13.3
                 , text>=1.2.1.1
                 , time>=1.5.0.1
                 , transformers>=0.2.2
                 , HsOpenSSL>=0.11.1.1
                 , http-client-openssl>=0.2.0.0
  ghc-options: -O2 -threaded -rtsopts

